<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.todomvp.ui.today.TodayFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.todomvp.ui.future.FutureFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_future" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.todomvp.ui.done.DoneFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_done" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.todomvp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.todomvp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>